--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset=utf-8>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: fonts.gstatic.com;">
+    <!-- <meta http-equiv=X-UA-Compatible content="IE=edge"> -->
+    <!-- <meta http-equiv="X-UA-Compatible" content="default-src 'self'; font-src 'self' data: fonts.gstatic.com;"> -->
+
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel=icon href=/favicon.ico> <title>classroomfinder</title>
     <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
