--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel=icon href=/favicon.ico> <title>classroomfinder</title>
     <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
-    <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css> <link
+    <link rel=stylesheet href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"> <link
         href=/css/chunk-vendors.e1ef4ff1.css rel=preload as=style>
     <link href=/js/app.b0ca6eac.js rel=preload as=script>
     <link href=/js/chunk-vendors.ed81eee0.js rel=preload as=script>
