--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Content-Security-Policy"
     content="
       default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; 
-      style-src   'self' https://fonts.googleapis.com;
+      style-src   'self' https://fonts.googleapis.com;https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css
       font-src    'self' data: https://fonts.gstatic.com;
       img-src     'self' data: content:;
       media-src   *;
